update to both the wildcard_handler and the default_handler to meeting TRAPI 1.0 requirements as well as use the new BKBs built from our new data pipeline. Also adds a one_hop_handler meeting both requirements.

--- a/notebooks/integrations/Default/CHP_Endpoint_Example.ipynb
+++ b/notebooks/integrations/Default/CHP_Endpoint_Example.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Queries for our system are in the probabilistic form of:<br>\n",
     "$P(survival\\_time > X | Mut\\_g_1 = True, Mut\\_g_2 = True, ..., Mut\\_g_n = True, Drug = d_1, Drug = d_2, ..., Drug = d_n)$<br>\n",
-    "Returned is a knowledge graph containing probability of survival time and contribution analysis (if specified)"
+    "Returned is a knowledge graph containing probability of survival time and contribution analysis (if specified in QG additional properties)."
    ]
   },
   {
@@ -28,15 +28,18 @@
    "source": [
     "# /predicate functionality example\n",
     "By running /predicates you can extract a json object with the following predicates:<br>\n",
-    "1.) gene_to_disease_association<br>\n",
-    "2.) chemical_to_disease_or_phenotypic_feature_association<br>\n",
-    "3.) disease_to_phenotypic_association<br>\n",
+    "1.) biolink:GeneToDiseaseAssociation<br>\n",
+    "2.) biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation<br>\n",
+    "3.) biolink:ChemicalToGeneAssociation<br>\n",
+    "4.) biolink:DiseaseToPhenotypicFeatureAssociation<br>\n",
     "\n",
     "The above predicates match the following biolink entities:<br>\n",
-    "1.) gene<br>\n",
-    "2.) drug<br>\n",
-    "3.) disease<br>\n",
-    "4.) phenotypicfeature"
+    "1.) biolink:Gene<br>\n",
+    "2.) biolink:Drug<br>\n",
+    "3.) biolink:Disease<br>\n",
+    "4.) biolink:PhenotypicFeature<br>\n",
+    "\n",
+    "It should be noted for this handler that only the edge predicates biolink:GeneToDiseaseAssociation, biolink:ChemicalToGeneAssociation and biolink:DiseaseToPhenotypicFeatureAssociation are used to link biolink:Gene and biolink:Drug nodes to the biolink:Disease node and the biolink:Disease node to the biolink:PhenotypicFeature node."
    ]
   },
   {
@@ -49,19 +52,22 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"gene\": {\n",
-      "    \"disease\": [\n",
-      "      \"gene_to_disease_association\"\n",
+      "  \"biolink:Gene\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:GeneToDiseaseAssociation\"\n",
       "    ]\n",
       "  },\n",
-      "  \"chemical_substance\": {\n",
-      "    \"disease\": [\n",
-      "      \"chemical_to_disease_or_phenotypic_feature_association\"\n",
+      "  \"biolink:Drug\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation\"\n",
+      "    ],\n",
+      "    \"biolink:Gene\": [\n",
+      "      \"biolink:ChemicalToGeneAssociation\"\n",
       "    ]\n",
       "  },\n",
-      "  \"disease\": {\n",
-      "    \"phenotypic_feature\": [\n",
-      "      \"disease_to_phenotypic_feature_association\"\n",
+      "  \"biolink:Disease\": {\n",
+      "    \"biolink:PhenotypicFeature\": [\n",
+      "      \"biolink:DiseaseToPhenotypicFeatureAssociation\"\n",
       "    ]\n",
       "  }\n",
       "}\n"
@@ -79,7 +85,7 @@
    "metadata": {},
    "source": [
     "# Build Query\n",
-    "constructs a json query object and can take in a survival time, a disease and a set of genes and drugs."
+    "Constructs a json query object and can take in a survival time, a disease and a set of genes and drugs."
    ]
   },
   {
@@ -92,7 +98,7 @@
     "#\n",
     "# Input:\n",
     "# -----------\n",
-    "# list of gene and drug tuples\n",
+    "# Survival time, a disease, and a set of genes/drugs\n",
     "#\n",
     "# Output:\n",
     "# -----------\n",
@@ -114,66 +120,62 @@
     "    reasoner_std[\"knowledge_graph\"] = { \"edges\": dict(),\n",
     "                                        \"nodes\": dict()\n",
     "                                      }\n",
-    "    # empty response graph\n",
-    "    reasoner_std[\"results\"] = [{ \"node_bindings\": dict(),\n",
-    "                                 \"edge_bindings\": dict()\n",
-    "                              }]\n",
     "    \n",
     "    node_count = 0\n",
     "    edge_count = 0\n",
     "    \n",
     "    # add genes\n",
     "    for gene in genes:\n",
-    "        reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type':'gene',\n",
-    "                                                                           'curie':'{}'.format(gene[1])\n",
+    "        reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category':'biolink:Gene',\n",
+    "                                                                           'id':'{}'.format(gene[1])\n",
     "                                                                         }\n",
     "        node_count += 1\n",
     "    \n",
     "    # add drugs\n",
     "    for drug in drugs:\n",
-    "        reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type':'chemical_substance',\n",
-    "                                                                           'curie':'{}'.format(drug[1])\n",
+    "        reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category':'biolink:Drug',\n",
+    "                                                                           'id':'{}'.format(drug[1])\n",
     "                                                                         }\n",
     "        node_count += 1\n",
     "    \n",
     "    # add in disease node\n",
-    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type':'disease',\n",
-    "                                                                       'curie':'{}'.format(disease[1])\n",
+    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category':'biolink:Disease',\n",
+    "                                                                       'id':'{}'.format(disease[1])\n",
     "                                                                     }\n",
     "    node_count += 1\n",
     "    \n",
     "    # link all evidence to disease\n",
     "    for node_id in reasoner_std['query_graph']['nodes'].keys():\n",
     "        node = reasoner_std['query_graph']['nodes'][node_id]\n",
-    "        if node['type'] == 'gene':\n",
-    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'type':'gene_to_disease_association',\n",
-    "                                                                               'source_id': node_id,\n",
-    "                                                                               'target_id': 'n{}'.format(node_count -1)   # should be disease node\n",
+    "        if node['category'] == 'biolink:Gene':\n",
+    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:GeneToDiseaseAssociation',\n",
+    "                                                                               'subject': node_id,\n",
+    "                                                                               'object': 'n{}'.format(node_count -1)   # should be disease node\n",
     "                                                                             }\n",
     "            edge_count += 1\n",
-    "        elif node['type'] == 'chemical_substance':\n",
-    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'type':'chemical_to_disease_or_phenotypic_feature_association',\n",
-    "                                                                               'source_id': node_id,\n",
-    "                                                                               'target_id': 'n{}'.format(node_count -1)  # should be disease node\n",
+    "        elif node['category'] == 'biolink:Drug':\n",
+    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation',\n",
+    "                                                                               'subject': node_id,\n",
+    "                                                                               'object': 'n{}'.format(node_count -1)  # should be disease node\n",
     "                                                                             }\n",
     "            edge_count += 1\n",
     "            \n",
     "    # add target survival node\n",
-    "    phenotype = ('Survival_Time', 'EFO:0000714')\n",
-    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type': 'phenotypic_feature',\n",
-    "                                                                       'curie': '{}'.format(phenotype[1]),\n",
+    "    phenotype = ('survival_time', 'EFO:0000714')\n",
+    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category': 'biolink:PhenotypicFeature',\n",
+    "                                                                       'id': '{}'.format(phenotype[1]),\n",
     "                                                                     }\n",
     "    node_count += 1\n",
     "    \n",
     "    # link disease to target\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'type':'disease_to_phenotypic_feature_association',\n",
-    "                                                                       'source_id': 'n{}'.format(node_count-2),\n",
-    "                                                                       'target_id': 'n{}'.format(node_count-1),\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:DiseaseToPhenotypicFeatureAssociation',\n",
+    "                                                                       'subject': 'n{}'.format(node_count-2),\n",
+    "                                                                       'object': 'n{}'.format(node_count-1),\n",
     "                                                                       # properties is optional - if not specified default \n",
-    "                                                                       # days is 970 and default qualifier is '>='\n",
+    "                                                                       # default qualifier is '>=', can be '<='\n",
     "                                                                       'properties': { 'qualifier':'>=',\n",
-    "                                                                                       'value': st\n",
-    "                                                                                       #'contributions':True    # uncomment to include contributions\n",
+    "                                                                                       'days': st,\n",
+    "                                                                                       'contributions':True    # uncomment to include contributions\n",
     "                                                                                     }\n",
     "                                                                     }\n",
     "    return reasoner_std"
@@ -220,22 +222,14 @@
    "metadata": {},
    "source": [
     "# Constructing the Query and pinging CHP\n",
-    "You can use the commented out functionality to check which genes and drugs are available. Genes and drugs are passed in as a list of tuples. Currently only breast cancer can be used as the disease."
+    "You can use the commented out functionality to check which genes and drugs are available. Survival time, genes and drugs are passed in as evidence. Genes and drugs are formed as a list of tuples. Currently only breast cancer can be used as the disease."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list of genes (and curies) we can query over\n",
     "#gene_list = readGenes()\n",
@@ -248,7 +242,7 @@
     "         ('MAP3K13','ENSEMBL:ENSG00000073803')]\n",
     "drugs = [('CYCLOPHOSPHAMIDE', 'CHEMBL:CHEMBL88')]\n",
     "disease = ('Breast_Cancer', 'MONDO:0007254')\n",
-    "survival_time = 1500 #days\n",
+    "survival_time = 970 #days\n",
     "# if genes or drugs is an empty list you can omit them\n",
     "query = buildQuery(survival_time, disease, genes=genes, drugs=drugs)\n",
     "payload = {'message': query}\n",
@@ -259,7 +253,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract end probabilitiy"
+    "# Extract end probabilitiy and contributions\n",
+    "\n",
+    "Extract the end probabilities and contributions (if specified in QG additional properties)."
    ]
   },
   {
@@ -273,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of survival > 1500 days is: 0.32692474699348495\n"
+      "Probability of survival > 970 days is: 0.6653032869408916\n"
      ]
     }
    ],
@@ -282,11 +278,67 @@
     "KG = chp_res['message']['knowledge_graph']\n",
     "for edge_key in KG['edges'].keys():\n",
     "    edge = KG['edges'][edge_key]\n",
-    "    if edge['type'] == 'disease_to_phenotypic_feature_association':\n",
+    "    if edge['predicate'] == 'biolink:DiseaseToPhenotypicFeatureAssociation':\n",
     "        p_survival = edge['has_confidence_level']\n",
+    "        contributions = edge['properties']['contributions']\n",
     "\n",
     "# probability of surival given QG specification\n",
     "print(\"Probability of survival > {} days is:\".format(survival_time), p_survival)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contributions\n",
+    "\n",
+    "Contributions are under both the true and false assignment of the target, survival_time. Contributions will only show contribution values for the evidence specified."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truth assignment contributions:\n",
+      "{\n",
+      "  \"survival_time >= 970 = True\": 1.2647436671262198e-06,\n",
+      "  \"drug_curies == CHEMBL:CHEMBL88 = True\": 1.2647436671262198e-06,\n",
+      "  \"mut_ENSEMBL:ENSG00000132155 = True\": 1.263393029637437e-06,\n",
+      "  \"mut_ENSEMBL:ENSG00000073803 = True\": 1.210631850210726e-06,\n",
+      "  \"mut_ENSEMBL:ENSG00000121879 = True\": 5.411181691549398e-08,\n",
+      "  \"mut_ENSEMBL:ENSG00000073803 = False\": 5.411181691549398e-08,\n",
+      "  \"mut_ENSEMBL:ENSG00000132155 = False\": 1.3506374887827586e-09,\n",
+      "  \"mut_ENSEMBL:ENSG00000087008 = True\": 1.3506374887827586e-09\n",
+      "}\n",
+      "False assignment contributions:\n",
+      "{\n",
+      "  \"survival_time >= 970 = False\": 6.362595173636608e-07,\n",
+      "  \"mut_ENSEMBL:ENSG00000132155 = True\": 6.362595173636608e-07,\n",
+      "  \"drug_curies == CHEMBL:CHEMBL88 = True\": 6.362595173636608e-07,\n",
+      "  \"mut_ENSEMBL:ENSG00000073803 = True\": 6.046694997448294e-07,\n",
+      "  \"mut_ENSEMBL:ENSG00000121879 = True\": 3.159001761883142e-08,\n",
+      "  \"mut_ENSEMBL:ENSG00000073803 = False\": 3.159001761883142e-08\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "truth_assignment_contributions = contributions['contribution_analysis']['survival_time >= {} = True'.format(survival_time)]\n",
+    "false_assignment_contributions = contributions['contribution_analysis']['survival_time >= {} = False'.format(survival_time)]\n",
+    "\n",
+    "truth_p = json.dumps(truth_assignment_contributions, indent=2)\n",
+    "false_p = json.dumps(false_assignment_contributions, indent=2)\n",
+    "\n",
+    "print(\"Truth assignment contributions:\")\n",
+    "print(truth_p)\n",
+    "\n",
+    "print(\"False assignment contributions:\")\n",
+    "print(false_p)"
    ]
   },
   {
