--- a/notebooks/integrations/Wildcard/Wildcard_Example.ipynb
+++ b/notebooks/integrations/Wildcard/Wildcard_Example.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Queries our system in the form of:<br>\n",
     "$P(survival\\_time > X | Drug \\wedge Disease)$<br>\n",
-    "Returned is a knowledge graph containing probability of survival time and genes sensitive to that drug in the context of the disease"
+    "Returned is a knowledge graph containing probability of survival time and genes that contributed strongly to the question of survival time w.r.t a drug and disease. It is our hope that these have some indication of gene sensitivites."
    ]
   },
   {
@@ -28,15 +28,18 @@
    "source": [
     "# /predicate functionality example\n",
     "By running /predicates you can extract a json object with the following predicates:<br>\n",
-    "1.) gene_to_disease_association<br>\n",
-    "2.) chemical_to_disease_or_phenotypic_feature_association<br>\n",
-    "3.) disease_to_phenotypic_association<br>\n",
+    "1.) biolink:GeneToDiseaseAssociation<br>\n",
+    "2.) biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation<br>\n",
+    "3.) biolink:ChemicalToGeneAssociation<br>\n",
+    "4.) biolink:DiseaseToPhenotypicFeatureAssociation<br>\n",
     "\n",
     "The above predicates match the following biolink entities:<br>\n",
-    "1.) gene<br>\n",
-    "2.) drug<br>\n",
-    "3.) disease<br>\n",
-    "4.) phenotypicfeature"
+    "1.) biolink:Gene<br>\n",
+    "2.) biolink:Drug<br>\n",
+    "3.) biolink:Disease<br>\n",
+    "4.) biolink:PhenotypicFeature<br>\n",
+    "\n",
+    "It should be noted for this handler that only the edge predicates biolink:GeneToDiseaseAssociation, biolink:ChemicalToGeneAssociation and biolink:DiseaseToPhenotypicFeatureAssociation are used to link a biolink:Gene and a biolink:Drug node to the biolink:Disease node and the biolink:Disease node to the biolink:PhenotypicFeature node."
    ]
   },
   {
@@ -49,19 +52,22 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"gene\": {\n",
-      "    \"disease\": [\n",
-      "      \"gene_to_disease_association\"\n",
+      "  \"biolink:Gene\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:GeneToDiseaseAssociation\"\n",
       "    ]\n",
       "  },\n",
-      "  \"chemical_substance\": {\n",
-      "    \"disease\": [\n",
-      "      \"chemical_to_disease_or_phenotypic_feature_association\"\n",
+      "  \"biolink:Drug\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation\"\n",
+      "    ],\n",
+      "    \"biolink:Gene\": [\n",
+      "      \"biolink:ChemicalToGeneAssociation\"\n",
       "    ]\n",
       "  },\n",
-      "  \"disease\": {\n",
-      "    \"phenotypic_feature\": [\n",
-      "      \"disease_to_phenotypic_feature_association\"\n",
+      "  \"biolink:Disease\": {\n",
+      "    \"biolink:PhenotypicFeature\": [\n",
+      "      \"biolink:DiseaseToPhenotypicFeatureAssociation\"\n",
       "    ]\n",
       "  }\n",
       "}\n"
@@ -79,7 +85,7 @@
    "metadata": {},
    "source": [
     "# Build Query\n",
-    "constructs a json query object and can take in a survival time, a disease and a single drug"
+    "Constructs a json query object and can take in a survival time, a disease and a drug."
    ]
   },
   {
@@ -92,7 +98,7 @@
     "#\n",
     "# Input:\n",
     "# -----------\n",
-    "# a single drug\n",
+    "# survival time, a disease and a drug\n",
     "#\n",
     "# Output:\n",
     "# -----------\n",
@@ -114,58 +120,54 @@
     "    reasoner_std[\"knowledge_graph\"] = { \"edges\": dict(),\n",
     "                                        \"nodes\": dict()\n",
     "                                      }\n",
-    "    # empty response graph\n",
-    "    reasoner_std[\"results\"] = [{ \"node_bindings\": dict(),\n",
-    "                                 \"edge_bindings\": dict()\n",
-    "                              }]\n",
     "    \n",
     "    node_count = 0\n",
     "    edge_count = 0\n",
     "    \n",
     "    # wildcard gene slot\n",
-    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type':'gene',\n",
-    "                                                                         }\n",
+    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category':'biolink:Gene',\n",
+    "                                                                     }\n",
     "    node_count += 1\n",
     "    \n",
     "    # drug\n",
-    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type':'chemical_substance',\n",
-    "                                                                           'curie':'{}'.format(drug[1])\n",
-    "                                                                         }\n",
+    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category':'biolink:Drug',\n",
+    "                                                                       'id':'{}'.format(drug[1])\n",
+    "                                                                     }\n",
     "    node_count += 1\n",
     "    \n",
     "    # add in disease node\n",
-    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type':'disease',\n",
-    "                                                                       'curie':'{}'.format(disease[1])\n",
+    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category':'biolink:Disease',\n",
+    "                                                                       'id':'{}'.format(disease[1])\n",
     "                                                                     }\n",
     "    node_count += 1\n",
     "    \n",
     "    # link gene evidence to disease\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'type':'gene_to_disease_association',\n",
-    "                                                                       'source_id': 'n{}'.format(node_count -3),\n",
-    "                                                                       'target_id': 'n{}'.format(node_count -1)   # should be disease node\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:GeneToDiseaseAssociation',\n",
+    "                                                                       'subject': 'n{}'.format(node_count -3),\n",
+    "                                                                       'object': 'n{}'.format(node_count -1)   # should be disease node\n",
     "                                                                      }\n",
     "    edge_count += 1\n",
     "    \n",
     "    # link drug evidence to disease\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'type':'chemical_to_disease_or_phenotypic_feature_association',\n",
-    "                                                                       'source_id': 'n{}'.format(node_count -2),\n",
-    "                                                                       'target_id': 'n{}'.format(node_count -1)  # should be disease node\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation',\n",
+    "                                                                       'subject': 'n{}'.format(node_count -2),\n",
+    "                                                                       'object': 'n{}'.format(node_count -1)  # should be disease node\n",
     "                                                                     }\n",
     "    edge_count += 1\n",
     "            \n",
     "    # add target survival node\n",
     "    phenotype = ('Survival_Time', 'EFO:0000714')\n",
-    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'type': 'phenotypic_feature',\n",
-    "                                                                       'curie': '{}'.format(phenotype[1]),\n",
+    "    reasoner_std['query_graph']['nodes']['n{}'.format(node_count)] = { 'category': 'biolink:PhenotypicFeature',\n",
+    "                                                                       'id': '{}'.format(phenotype[1]),\n",
     "                                                                     }\n",
     "    node_count += 1\n",
     "    \n",
     "    # link disease to target\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'type':'disease_to_phenotypic_feature_association',\n",
-    "                                                                       'source_id': 'n{}'.format(node_count-2),\n",
-    "                                                                       'target_id': 'n{}'.format(node_count-1),\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:DiseaseToPhenotypicFeatureAssociation',\n",
+    "                                                                       'subject': 'n{}'.format(node_count-2),\n",
+    "                                                                       'object': 'n{}'.format(node_count-1),\n",
     "                                                                       'properties': { 'qualifier':'>=',\n",
-    "                                                                                       'value': st\n",
+    "                                                                                       'days': st\n",
     "                                                                                     }\n",
     "                                                                     }\n",
     "    return reasoner_std"
@@ -175,27 +177,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read Genes and Drugs\n",
-    "Functionality to read in our set of available genes and drugs with respective ensemble and chembl curie IDs."
+    "# Read Drugs\n",
+    "Functionality to read in our set of available drugs with respective chembl curie IDs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def readGenes():\n",
-    "    with open('gene_curie_map.csv', 'r') as gene_file:\n",
-    "        reader = csv.reader(gene_file)\n",
-    "        next(reader)\n",
-    "        rows = [(row[0],row[1]) for row in reader]\n",
-    "    return rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +200,12 @@
    "metadata": {},
    "source": [
     "# Constructing the Query and pinging CHP\n",
-    "You can use the commented out functionality to check which drugs are available. Disease and dryg are passed in as a tuple shown below. Currently only breast cancer can be used as the disease."
+    "You can use the commented out functionality to check which drugs are available. Disease and drug are passed in as a tuple shown below. Currently only breast cancer can be used as the disease."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -249,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(survival_time > 1000 | drug & disease): 0.6221198156682027\n"
+      "P(survival_time > 1000 | drug & disease): 0.5310173697270472\n"
      ]
     }
    ],
@@ -269,11 +257,11 @@
     "survival_result = results[0]\n",
     "\n",
     "for qge_id in survival_result['edge_bindings'].keys():\n",
-    "    if QG['edges'][qge_id]['type'] == 'disease_to_phenotypic_feature_association':\n",
-    "        kge_id = survival_result['edge_bindings'][qge_id]['kg_id']\n",
-    "        survival = KG['edges'][kge_id]['has_confidence_level']\n",
+    "    if QG['edges'][qge_id]['predicate'] == 'biolink:DiseaseToPhenotypicFeatureAssociation':\n",
+    "        kge_id = survival_result['edge_bindings'][qge_id][0]['id']\n",
+    "        probability = KG['edges'][kge_id]['has_confidence_level']\n",
     "        \n",
-    "print(\"P(survival_time > {} | drug & disease):\".format(survival_time),survival)"
+    "print(\"P(survival_time > {} | drug & disease):\".format(survival_time),probability)"
    ]
   },
   {
@@ -285,23 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('PIK3CA', 'ENSEMBL:ENSG00000121879', 0.05081300813008113)\n",
-      "('RYR2', 'ENSEMBL:ENSG00000198626', 0.03355916892502249)\n",
-      "('ROCK1', 'ENSEMBL:ENSG00000067900', -0.03288166214995473)\n",
-      "('RBMXL3', 'ENSEMBL:ENSG00000175718', -0.030487804878048686)\n",
-      "('CBFB', 'ENSEMBL:ENSG00000067955', -0.026784101174344994)\n",
-      "('GRID2', 'ENSEMBL:ENSG00000152208', 0.025925925925925845)\n",
-      "('ANKAR', 'ENSEMBL:ENSG00000151687', 0.025925925925925845)\n",
-      "('CCDC185', 'ENSEMBL:ENSG00000178395', -0.02439024390243895)\n",
-      "('WHSC1L1', 'ENSEMBL:ENSG00000147548', -0.02439024390243895)\n",
-      "('KLHL28', 'ENSEMBL:ENSG00000179454', -0.02439024390243895)\n"
+      "('ENSEMBL:ENSG00000141510', 'TP53', -0.017925134747564825)\n",
+      "('ENSEMBL:ENSG00000129003', 'VPS13C', -0.01587301587301598)\n",
+      "('ENSEMBL:ENSG00000198626', 'RYR2', 0.015118923997428766)\n",
+      "('ENSEMBL:ENSG00000121879', 'PIK3CA', 0.015057113187954399)\n",
+      "('ENSEMBL:ENSG00000111642', 'CHD4', -0.013536567274885123)\n",
+      "('ENSEMBL:ENSG00000196632', 'WNK3', -0.013536567274885123)\n",
+      "('ENSEMBL:ENSG00000169855', 'ROBO1', -0.013227513227513315)\n",
+      "('ENSEMBL:ENSG00000118473', 'SGIP1', -0.013227513227513315)\n",
+      "('ENSEMBL:ENSG00000005810', 'MYCBP2', -0.013227513227513315)\n",
+      "('ENSEMBL:ENSG00000163554', 'SPTA1', 0.013091529446669718)\n"
      ]
     }
    ],
@@ -316,14 +304,14 @@
     "genes = []\n",
     "for sr in sensitivity_results:\n",
     "    for qge_id in sr['edge_bindings'].keys():\n",
-    "        if QG['edges'][qge_id]['type'] == 'gene_to_disease_association':\n",
-    "            kge_id = sr['edge_bindings'][qge_id]['kg_id']\n",
+    "        if QG['edges'][qge_id]['predicate'] == 'biolink:GeneToDiseaseAssociation':\n",
+    "            kge_id = sr['edge_bindings'][qge_id][0]['id']\n",
     "            sensitivity = KG['edges'][kge_id]\n",
-    "            gene_curie = sensitivity['source_id']\n",
-    "            gene_weight = sensitivity['weight']    \n",
+    "            gene_curie = sensitivity['subject']\n",
+    "            gene_weight = sensitivity['value']    \n",
     "    for qgn_id in sr['node_bindings'].keys():\n",
-    "        if QG['nodes'][qgn_id]['type'] == 'gene':\n",
-    "            kgn_id = sr['node_bindings'][qgn_id]['kg_id']\n",
+    "        if QG['nodes'][qgn_id]['category'] == 'biolink:Gene':\n",
+    "            kgn_id = sr['node_bindings'][qgn_id][0]['id']\n",
     "            gene_name = KG['nodes'][kgn_id]['name']\n",
     "    genes.append((gene_name, gene_curie, gene_weight))\n",
     "    \n",
