cleaned up notebooks to reflect changes in Coulomb

--- a/notebooks/babel/integrations/Default/CHP_Endpoint_Example.ipynb
+++ b/notebooks/babel/integrations/Default/CHP_Endpoint_Example.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# /query and /predicate functionality for CHP\n",
     "\n",
-    "Queries for our system are in the probabilistic form of:<br>\n",
+    "Queries for our system are in the probabilistic form:<br>\n",
     "$P(survival\\_time > X | Mut\\_g_1 = True, Mut\\_g_2 = True, ..., Mut\\_g_n = True, Drug = d_1, Drug = d_2, ..., Drug = d_n)$<br>\n",
     "Returned is a knowledge graph containing probability of survival time and contribution analysis (if specified in QG additional properties)."
    ]
@@ -284,61 +284,6 @@
     "\n",
     "# probability of surival given QG specification\n",
     "print(\"Probability of survival > {} days is:\".format(survival_time), p_survival)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Contributions\n",
-    "\n",
-    "Contributions are under both the true and false assignment of the target, survival_time. Contributions will only show contribution values for the evidence specified."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Truth assignment contributions:\n",
-      "{\n",
-      "  \"survival_time >= 970 = True\": 1.2647436671262198e-06,\n",
-      "  \"drug_curies == CHEMBL:CHEMBL88 = True\": 1.2647436671262198e-06,\n",
-      "  \"mut_ENSEMBL:ENSG00000132155 = True\": 1.263393029637437e-06,\n",
-      "  \"mut_ENSEMBL:ENSG00000073803 = True\": 1.210631850210726e-06,\n",
-      "  \"mut_ENSEMBL:ENSG00000121879 = True\": 5.411181691549398e-08,\n",
-      "  \"mut_ENSEMBL:ENSG00000073803 = False\": 5.411181691549398e-08,\n",
-      "  \"mut_ENSEMBL:ENSG00000132155 = False\": 1.3506374887827586e-09,\n",
-      "  \"mut_ENSEMBL:ENSG00000087008 = True\": 1.3506374887827586e-09\n",
-      "}\n",
-      "False assignment contributions:\n",
-      "{\n",
-      "  \"survival_time >= 970 = False\": 6.362595173636608e-07,\n",
-      "  \"mut_ENSEMBL:ENSG00000132155 = True\": 6.362595173636608e-07,\n",
-      "  \"drug_curies == CHEMBL:CHEMBL88 = True\": 6.362595173636608e-07,\n",
-      "  \"mut_ENSEMBL:ENSG00000073803 = True\": 6.046694997448294e-07,\n",
-      "  \"mut_ENSEMBL:ENSG00000121879 = True\": 3.159001761883142e-08,\n",
-      "  \"mut_ENSEMBL:ENSG00000073803 = False\": 3.159001761883142e-08\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "truth_assignment_contributions = contributions['contribution_analysis']['survival_time >= {} = True'.format(survival_time)]\n",
-    "false_assignment_contributions = contributions['contribution_analysis']['survival_time >= {} = False'.format(survival_time)]\n",
-    "\n",
-    "truth_p = json.dumps(truth_assignment_contributions, indent=2)\n",
-    "false_p = json.dumps(false_assignment_contributions, indent=2)\n",
-    "\n",
-    "print(\"Truth assignment contributions:\")\n",
-    "print(truth_p)\n",
-    "\n",
-    "print(\"False assignment contributions:\")\n",
-    "print(false_p)"
    ]
   },
   {
