--- a/notebooks/babel/integrations/Onehop/OneHop_Example.ipynb
+++ b/notebooks/babel/integrations/Onehop/OneHop_Example.ipynb
@@ -121,15 +121,14 @@
     "                                        \"nodes\": dict()\n",
     "                                      }\n",
     "\n",
-    "    # drug\n",
-    "    reasoner_std['query_graph']['nodes']['n0'] = { 'category':'biolink:Drug',\n",
-    "                                                   'id':'{}'.format(drug[1])\n",
+    "    # wildcard gene slot\n",
+    "    reasoner_std['query_graph']['nodes']['n0'] = { 'category':'biolink:Gene'\n",
     "                                                 }\n",
     "    \n",
-    "    # wildcard gene slot\n",
-    "    reasoner_std['query_graph']['nodes']['n1'] = { 'category':'biolink:Gene'\n",
+    "    # drug\n",
+    "    reasoner_std['query_graph']['nodes']['n1'] = { 'category':'biolink:Drug',\n",
+    "                                                   'id':'{}'.format(drug[1])\n",
     "                                                 }\n",
-    "\n",
     "    \n",
     "    # link drug to gene\n",
     "    reasoner_std['query_graph']['edges']['e0'] = { 'predicate':'biolink:ChemicalToGeneAssociation',\n",
@@ -214,15 +213,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('PIK3CA', 'CHEMBL:CHEMBL88', 0.015628888557065554)\n",
-      "('WNK3', 'CHEMBL:CHEMBL88', -0.014322333383106955)\n",
-      "('MUC16', 'CHEMBL:CHEMBL88', -0.013899258374396584)\n",
-      "('ROBO1', 'CHEMBL:CHEMBL88', -0.013812154696132686)\n",
-      "('SGIP1', 'CHEMBL:CHEMBL88', -0.013812154696132686)\n",
-      "('MYCBP2', 'CHEMBL:CHEMBL88', -0.013812154696132686)\n",
-      "('RYR2', 'CHEMBL:CHEMBL88', 0.013725051017868792)\n",
-      "('CDH1', 'CHEMBL:CHEMBL88', -0.012368722313473766)\n",
-      "('ABCA13', 'CHEMBL:CHEMBL88', -0.012070081130854688)\n"
+      "(['WNK3'], 'ENSEMBL:ENSG00000196632', -0.029651380276518785)\n",
+      "(['ROBO1'], 'ENSEMBL:ENSG00000169855', -0.028486670606384976)\n",
+      "(['MYCBP2'], 'ENSEMBL:ENSG00000005810', -0.027851218557822646)\n",
+      "(['SGIP1'], 'ENSEMBL:ENSG00000118473', -0.027499445254417717)\n",
+      "(['MUC16'], 'ENSEMBL:ENSG00000181143', -0.026864718756743816)\n",
+      "(['RYR2'], 'ENSEMBL:ENSG00000198626', 0.025908071633522205)\n",
+      "(['ERBB2'], 'ENSEMBL:ENSG00000141736', -0.02417889048482236)\n",
+      "(['CDH1'], 'ENSEMBL:ENSG00000039068', -0.0239757806068319)\n",
+      "(['SPTA1'], 'ENSEMBL:ENSG00000163554', 0.023688321656584372)\n"
      ]
     }
    ],
