--- a/notebooks/babel/integrations/Wildcard/Wildcard_Example.ipynb
+++ b/notebooks/babel/integrations/Wildcard/Wildcard_Example.ipynb
@@ -244,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(survival_time > 1000 | drug & disease): 0.5310173697270472\n"
+      "P(survival_time > 1000 | drug & disease): 0.5300454864137873\n"
      ]
     }
    ],
@@ -280,16 +280,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('ENSEMBL:ENSG00000141510', 'TP53', -0.017925134747564825)\n",
-      "('ENSEMBL:ENSG00000129003', 'VPS13C', -0.01587301587301598)\n",
-      "('ENSEMBL:ENSG00000198626', 'RYR2', 0.015118923997428766)\n",
-      "('ENSEMBL:ENSG00000121879', 'PIK3CA', 0.015057113187954399)\n",
-      "('ENSEMBL:ENSG00000111642', 'CHD4', -0.013536567274885123)\n",
-      "('ENSEMBL:ENSG00000196632', 'WNK3', -0.013536567274885123)\n",
-      "('ENSEMBL:ENSG00000169855', 'ROBO1', -0.013227513227513315)\n",
-      "('ENSEMBL:ENSG00000118473', 'SGIP1', -0.013227513227513315)\n",
-      "('ENSEMBL:ENSG00000005810', 'MYCBP2', -0.013227513227513315)\n",
-      "('ENSEMBL:ENSG00000163554', 'SPTA1', 0.013091529446669718)\n"
+      "(['TP53'], 'ENSEMBL:ENSG00000141510', -0.033660234999710104)\n",
+      "(['VPS13C'], 'ENSEMBL:ENSG00000129003', -0.031878458032680954)\n",
+      "(['RYR2'], 'ENSEMBL:ENSG00000198626', 0.028681867597806714)\n",
+      "(['WNK3'], 'ENSEMBL:ENSG00000196632', -0.028082711800518235)\n",
+      "(['CHD4'], 'ENSEMBL:ENSG00000111642', -0.027544443554162527)\n",
+      "(['ROBO1'], 'ENSEMBL:ENSG00000169855', -0.027317485660542835)\n",
+      "(['MYCBP2'], 'ENSEMBL:ENSG00000005810', -0.026678035049294144)\n",
+      "(['SGIP1'], 'ENSEMBL:ENSG00000118473', -0.026346134957570193)\n",
+      "(['SPTA1'], 'ENSEMBL:ENSG00000163554', 0.02588583100880638)\n",
+      "(['ERBB2'], 'ENSEMBL:ENSG00000141736', -0.023752457155211085)\n"
      ]
     }
    ],
